feat!: Add game board UI

--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Tic Tac Toe</title>
+    <title>Tic-tac-toe</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 
 <body>
-    <h1>Tic Tac Toe</h1>
+    <header>
+        <h1>Tic-tac-toe</h1>
+    </header>
+
+    <div class="game-board-wrapper">
+        <div class="game-board">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
+    </div>
 </body>
 
 </html>
