feat!: Add .controls

--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
     <header>
         <h1>Tic-tac-toe</h1>
     </header>
-
+    <div class="controls">
+        <span class="score-board">
+            <span class="x-score">
+                <button type="button">X</button>
+                <output>0</output>
+            </span>
+            <span class="colon">:</span>
+            <span class="o-score">
+                <output>0</output>
+                <button type="button">O</button>
+            </span>
+        </span>
+        <button type="button" id="restart">Restart</button>
+    </div>
+    <div class="final-result">Final result still pending</div>
     <div class="game-board-wrapper">
         <div class="game-board">
             <div class="cell"></div>
