feat!: Add GameBoardView.populate

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     <div class="final-result">Final result still pending</div>
     <div class="game-board-wrapper">
         <div class="game-board">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell"><img src=""></div>
+            <div class="cell"><img src=""></div>
+            <div class="cell"><img src=""></div>
+            <div class="cell"><img src=""></div>
+            <div class="cell"><img src=""></div>
+            <div class="cell"><img src=""></div>
+            <div class="cell"><img src=""></div>
+            <div class="cell"><img src=""></div>
+            <div class="cell"><img src=""></div>
         </div>
     </div>
 </body>
