feat!: Click to mark cells

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     <div class="final-result">Final result still pending</div>
     <div class="game-board-wrapper">
         <div class="game-board">
-            <div class="cell"><img src=""></div>
-            <div class="cell"><img src=""></div>
-            <div class="cell"><img src=""></div>
-            <div class="cell"><img src=""></div>
-            <div class="cell"><img src=""></div>
-            <div class="cell"><img src=""></div>
-            <div class="cell"><img src=""></div>
-            <div class="cell"><img src=""></div>
-            <div class="cell"><img src=""></div>
+            <div data-index="0" class="cell"><img src=""></div>
+            <div data-index="1" class="cell"><img src=""></div>
+            <div data-index="2" class="cell"><img src=""></div>
+            <div data-index="3" class="cell"><img src=""></div>
+            <div data-index="4" class="cell"><img src=""></div>
+            <div data-index="5" class="cell"><img src=""></div>
+            <div data-index="6" class="cell"><img src=""></div>
+            <div data-index="7" class="cell"><img src=""></div>
+            <div data-index="8" class="cell"><img src=""></div>
         </div>
     </div>
 </body>
