--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button type="button">O</button>
             </span>
         </span>
-        <button type="button" id="next-round">Next Round</button>
+        <button type="button" id="next-round" disabled>Next Round</button>
         <button type="button" id="restart">Restart</button>
     </div>
     <div class="final-result">Final result still pending</div>
