feat: Add instruction for putting name

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <div data-index="8" class="cell"><img src=""></div>
         </div>
     </div>
+    <p class="instruction">Click X or O button to put your name</p>
 </body>
 
 </html>
